<resources>
    <string name="app_name">Phoenix Park</string>
    <string name="action_settings">Settings</string>
    <string name="content_desc">Conent description</string>
    <string name="share">Share</string>
    <string name="favs">Favorites</string>
    <string name="feedback">Feedback</string>
    <string name="web">Open in browser</string>
    <string name="contact_organiser">Contact organiser</string>
    <string name="ev_feedback">Event feedback</string>
    <string name="direct_to">Directions</string>
    <string name="events">Events</string>
    <string name="news">News</string>
    <string name="user_events">Promoted Events</string>
    <string name="map">Map</string>
    <string name="attractions">Attractions</string>
    <string name="fav_delete">Delete</string>
    <string name="filter">Filter</string>
    <string name="add_event">+</string>
    <string name="info">Info</string>
    <string name="settings">Settings</string>
    <string name="refresh">Refresh</string>
    <string name="submit">Submit</string>
    <string name="about">About</string>
    <string name="enter_title">Event Title:</string>
    <string name="enter_description">Event Description:</string>
    <string name="enter_date">Event Date:</string>
    <string name="enter_location">Event Location:</string>
    <string name="enter_category">Event Category:</string>
    <string name="enter_contact">Event email address (optional):</string>
    <string name="enter_comment">Comment:</string>
    <string name="enter_rating">Rating:</string>
    <string name="enter_category_opinion">Category:</string>
    <string name="enter_demographic_opinion">Demographic</string>
    <string name="suggested_category_here">Enter suggested category</string>
    <string name="aras_an_uachtaran">Áras an Uachtaráin</string>
    <string name="DirectionsToScreen">Directions</string>
    <string-array name="ratings">
        <item>5 Stars</item>
        <item>4 Stars</item>
        <item>3 Stars</item>
        <item>2 Stars</item>
        <item>1 Star</item>
    </string-array>
    <string-array name="categories">
        <item>None of these</item>
        <item>Sport</item>
        <item>Family Fun</item>
        <item>Charity</item>
        <item>Arts</item>
        <item>Music</item>
        <item>Talk/Workshop</item>
        <item>Food and Drink</item>
        <item>Music</item>
    </string-array>
    <string-array name="locations">
        <item>Áras an Uachtaráin</item>
        <item>Dublin Zoo</item>
        <item>Ashtown Castle</item>
        <item>Magazine Fort</item>
        <item>Wellington Monument</item>
        <item>Sports Grounds</item>
        <item>American Ambassadors Residence</item>
        <item>The Phoenix Monument</item>
        <item>Papal Cross</item>
        <item>Visitor Centre</item>
        <item>Farmleigh</item>
    </string-array>
    <string-array name="gates">
        <item>Main Gate</item>
        <item>NCR Gate</item>
        <item>Cabra Gate</item>
        <item>Ashtown Gate</item>
        <item>Castleknock Gate</item>
        <item>Whites Gate</item>
        <item>Knockmaroon Gate</item>
        <item>Chapelizod Gate</item>
        <item>Islandbridge Gate</item>
    </string-array>
    <string-array name="restaurants">
        <item>The Phoenix Cafe</item>
        <item>Phoenix Park Tea Rooms</item>
        <item>The Boathouse Cafe</item>
    </string-array>
    <string-array name="carparks">
        <item>Cricket Club Parking</item>
        <item>Dublin Zoo Parking</item>
        <item>Papal Cross Car Park</item>
        <item>Visitor Centre Car Park</item>
        <item>Martins Row Car Park</item>
    </string-array>
    <string-array name="demographics">
        <item>All ages</item>
        <item>Family with young children</item>
        <item>Teenagers</item>
        <item>Over 18\'s</item>
        <item>Couples</item>
        <item>Senior Citizens</item>
    </string-array>
    <string name="aras_an_uachtarain_desc_p1">Áras an Uachtaráin had a colourful history before becoming 
        the Official Residence of the President of Ireland. Built in 1751 Situated in the 1,752 acres of 
        the Phoenix Park near Dublin, the original house was built by Park Ranger Nathaniel Clements. By 
        1782 it had been acquired for use by the Viceroys who oversaw British rule in Ireland. Clements 
        received £25,000 for the house.</string>
    <string name="aras_an_uachtarain_desc_p2">The house continued as the official residence of the Viceroys 
        until 1922. For much of the period of Home Rule that followed it was the residence of the Governors
         General, the Crown’s representatives during the new dispensation. In 1938 it became the Official 
         Residence of the President of Ireland and has been used for that purpose since.</string>
    <string name="aras_an_uachtarain_desc_p3">There have been many improvements and additions to the house 
        over the years, the most noteworthy being:
        \n-Establishment of formal gardens by Decimus Burton in the 1840s
		\n-Addition of the East Wing in 1849 for the state visit of Queen Victoria
		\n-Installation of Dublin mains gas supply in 1852 and electricity in 1908
		\n-Extension of the West Wing for the visit of George V in 1911. \n\n Aras an Uachtaráin is now the 
		official residence of the President of Ireland. The house is open to the public each Saturday and 5,200
		 people visit the formal rooms and view the  grounds each year. In addition to official guests at the many 
		 state functions hosted by the President, more than 11,000 visit the house by invitation each year.</string>
    <string name="papal_cross_desc_p1">The Papal Cross was erected at the edge of Fifteen Acres for the visit 
        of Pope John Paul II on 29 September 1979. Over one million people attended an open air mass in the 
        park at the time. The white cross, which dominates its surroundings, is 35 metres (115 ft) high and 
        was built with steel girders. It was installed with some difficulty: after several attempts, the cross 
        was eventually erected just a fortnight before the Pope arrived.</string>
    <string name="papal_cross_desc_p2">When Pope John Paul II died in Rome on the 2nd April 2005, at the age of 
        84 years, a memorial service was held soon afterwards at this site.  On the 8th April 2005, it hosted many 
        thousands of people who gathered in tribute, leaving flowers and other tokens of remembrance of him.</string>
    <string name="farmleigh_desc_p1">Farmleigh, an estate of 78 acres situated to the north-west of Dublin\'s 
        Phoenix Park, was purchased from the Guinness family by the Irish Government in 1999 for €29.2m. The 
        house has been carefully refurbished by the Office of Public Works as the premier accommodation for 
        visiting dignitaries and guests of the nation, for high level Government meetings, and for public 
        enjoyment.</string>
    <string name="farmleigh_desc_p2">Originally a small Georgian house built in the late 18th century, Farmleigh 
        was purchased by Edward Cecil Guinness (1847-1927) on his marriage to his cousin, Adelaide Guinness in 
        1873. A great-grandson of Arthur Guinness, founder of the eponymous brewery, Edward Cecil became the first 
        Earl of Iveagh in 1919. The first major building programme was undertaken in 1881-84 to designs by Irish 
        architect James Franklin Fuller (1832-1925), who extended the House to the west, refurbished the existing 
        house, and added a third storey. In 1896 the Ballroom wing was added, designed by the Scottish architect 
        William Young (1843-1900).</string>
    <string name="farmleigh_desc_p3">With the addition of a new Conservatory adjoining the Ballroom in 1901, 
        increased planting of broadleaves and exotics in the gardens, Farmleigh had, by the early years of 
        the 20th century, all the requisites for gracious living and stylish entertainment. Its great charm lies 
        in the eclecticism of its interior decoration ranging from the classical style to Jacobean, Louis XV, Louis 
        XVI and Georgian. In 2001 the Office of Public Works began the delicate job of restoring this magnificent 
        estate. This was carried out with great delicacy and care so as the historical ambience at Farmleigh has 
        been preserved as it assumes its new role on behalf of the Irish State.</string>
    <string name="wellington_desc_p1">Built to commemorate the victories of the ‘Iron Duke’ Arthur Wellesley, Duke 
        of Wellington, who was born in Dublin, the memorial in the Phoenix park is the tallest obelisk in Europe. 
        It is 205 feet tall and was intended to be taller but for a shortage of funds. It was completed in 1861. 
        There was also plans for a statue of Wellesley on horseback but the shortage of funds ruled that out.</string>
    <string name="wellington_desc_p2">There are four bronze plaques cast from cannons captured at Waterloo – three of 
        which have pictorial representations of his career while the fourth has an inscription. The plaques depict 
        ‘Civil and Religious Liberty’ by John Hogan, ‘Waterloo’ by Thomas Farrell and the ‘Indian Wars’ by Joseph Kirk. 
        The inscription reads:\n\n
		Asia and Europe, saved by thee, proclaim,
		Invincible in war thy deathless name,
		Now round thy brow the civic oak we twine,
		That every earthly glory may be thine.</string>
    <string name="dublin_zoo_desc_p1">Dublin Zoo is one of the oldest zoos in the world but has gone through an 
        impressive metamorphosis over the last decade. The most recent addition is the Kaziranga Forest Trail, a 
        wonderful new habitat for the zoo\'s breeding herd of Asian elephants. Dublin Zoo first opened its doors on 
        1st September 1831 and was known as the Zoological Gardens Dublin. Its then 15 acres in the Phoenix Park 
        featured 46 mammals and 72 birds donated by London Zoo. Visitors flocked to the zoo to marvel at animals they 
        had only read about or seen in pictures.</string>
    <string name="dublin_zoo_desc_p2">The zoo is a significant part of Dublin\'s long and fascinating history and every 
        effort is made to preserve its heritage. For example, the old timber-framed, thatched entrance lodge, built in 
        1833 for just £30, is being restored to its former charming glory. Recently re-opened, Haughton House at the 
        zoo\'s centre was built in 1898 in memory of Samuel Haughton, Royal Zoological Society of Ireland secretary, a 
        Trinity College professor, and noted science writer; it contained 10 wild animal \'dens\', tearooms and a lecture 
        room. The restoration brings an exciting new Learning and Discovery Centre, lecture facilities, a verandah and 
        a balcony with views over the Kaziranga Forest Trail.Zoo milestones include an open day in 1838 - attended by 
        20,000 people - to celebrate Queen Victoria\'s coronation. The first giraffe arrived in 1844 and the first pair 
        of lions - Natal and Natalie - arrived in 1855, producing their first cubs two years later. Reptiles got their 
        own house in 1876.</string>
    <string name="dublin_zoo_desc_p3">Despite severe problems during the 1916 Easter Rising and World War II, the zoo 
        survived and now occupies 40 hectares with around 650 animals and birds from all over the globe. Conservation,
         study and education are its hallmark and staff work in partnership with zoos worldwide to make a significant 
         contribution to the conservation of rare species, promoting the imprtance of animal habitat protection and 
         playing a vital role in endangered species breeding programmes.</string>
</resources>