<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".MainActivity$DummySectionFragment" >

	<LinearLayout 
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:orientation="vertical"
		    android:scrollbars = "vertical"
		    android:focusable="true"
		    android:focusableInTouchMode="true" >
		
		    <!-- Enter title for event -->
		    <TextView
	        android:id="@+id/enter_title"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center_horizontal"
	        android:text="@string/enter_title"
	        android:textStyle="bold"
	        android:textSize="22sp" />
		    
		    <EditText
		        android:id="@+id/title_enter"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginBottom="5dp"
		        android:layout_marginLeft="10dp"
		        android:layout_marginRight="10dp"
		        android:imeOptions="actionDone"
		        android:inputType="textCapSentences" />
		
		    <!-- Enter description of event -->
		    <TextView
	        android:id="@+id/enter_desc"
	        android:layout_width="fill_parent"
	        android:layout_height="30sp"
	        android:gravity="center_horizontal"
	        android:text="@string/enter_description"
	        android:textStyle="bold"
	        android:textSize="22sp" />
		    
		    <EditText
		        android:id="@+id/desc_enter"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginBottom="5dp"
		        android:layout_marginLeft="10dp"
		        android:layout_marginRight="10dp"
		        android:gravity="top|left"
			    android:singleLine="false"
			    android:lines="5"
		        android:imeOptions="actionDone"
		        android:inputType="textCapSentences|textMultiLine" 
		        android:scrollbarStyle="insideInset"
		        android:scrollbars="vertical" 
		        android:overScrollMode="always" />
		
		    <!-- Enter date of event -->
		    <TextView
	        android:id="@+id/enter_date"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center_horizontal"
	        android:text="@string/enter_date"
	        android:textStyle="bold"
	        android:textSize="22sp" />
		    
		    <DatePicker
		        android:id="@+id/datepicker"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center"
		        android:layout_marginBottom="5dp"
		        android:calendarViewShown="false" />
		    
		    <!-- Enter location of event -->
		    <TextView
	        android:id="@+id/enter_location"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center_horizontal"
	        android:text="@string/enter_location"
	        android:textStyle="bold"
	        android:textSize="22sp" />
		    
		    <Spinner
		        android:id="@+id/location_spin"
		        android:layout_width="fill_parent"
		        android:layout_height="35dp" 
		        android:textAlignment="center"/>
		    
		    <!-- Enter category of event -->
		    <TextView
	        android:id="@+id/enter_category"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center_horizontal"
	        android:text="@string/enter_category"
	        android:textStyle="bold"
	        android:textSize="22sp" />
		    
		    <Spinner
		        android:id="@+id/category_spin"
		        android:layout_width="fill_parent"
		        android:layout_height="35dp" 
		        android:textAlignment="center"/>
		    
		    <!-- Enter contact -->
		    <TextView
	        android:id="@+id/enter_contactlink"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:gravity="center_horizontal"
	        android:text="@string/enter_contact"
	        android:textStyle="bold"
	        android:textSize="22sp" />
		
		    <EditText
		        android:id="@+id/contactlink_enter"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginBottom="5dp"
		        android:layout_marginLeft="10dp"
		        android:layout_marginRight="10dp"
		        android:imeOptions="actionDone"
		        android:inputType="textCapSentences" />
		    
		    <Button
				android:id="@+id/submit_button"
				android:layout_width="150dp"
				android:layout_height="50dp"
				android:text="@string/submit"
				android:layout_gravity="center"
				android:layout_marginBottom="5dp" />
		    
	</LinearLayout>
</ScrollView>